Ensure EntryView uses temp dir for images unless otherwise directed

EntryViews in the FetchDialog were saving images into the local data
dir even when the entry with the image was never saved to the
collection. Rather than relying on the config setting, rely on the
owner of the view telling it whether to use temp dirs or not.

BUG: 508902
FIXED-IN: 4.1.4